--- a/package.json
+++ b/package.json
@@ -1,12 +1,39 @@
 {
-  "name": "tcm",
-  "version": "1.0.0",
-  "description": "Megaverse generator",
-  "main": "index.ts",
-  "repository": "git@github.com:andrescabsi14/TCM.git",
-  "author": "Andres Cabrera <andrewcabs17@gmail.com>",
-  "license": "MIT",
-  "dependencies": {
-    "axios": "^1.7.4"
-  }
+    "name": "tcm",
+    "version": "1.0.0",
+    "description": "Megaverse generator",
+    "main": "index.ts",
+    "repository": "git@github.com:andrescabsi14/TCM.git",
+    "author": "Andres Cabrera <andrewcabs17@gmail.com>",
+    "license": "MIT",
+    "type": "module",
+    "dependencies": {
+        "axios": "^1.7.4",
+        "dotenv": "^16.4.5",
+        "tsx": "^4.17.0",
+        "winston": "^3.14.2"
+    },
+    "scripts": {
+        "start": "tsx src/index.ts",
+        "test": "jest",
+        "lint": "eslint 'src/**/*.ts'",
+        "format": "prettier --write .",
+        "build": "tsc"
+    },
+    "devDependencies": {
+        "@types/axios": "^0.14.0",
+        "@types/jest": "^29.5.12",
+        "@types/winston": "^2.4.4",
+        "@typescript-eslint/eslint-plugin": "^8.1.0",
+        "@typescript-eslint/parser": "^8.1.0",
+        "eslint": "^9.9.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.2.1",
+        "jest": "^29.7.0",
+        "nodemon": "^3.1.4",
+        "prettier": "^3.3.3",
+        "ts-jest": "^29.2.4",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.5.4"
+    }
 }
